@@ -1,3 +1,4 @@
 -Xms512m
 -Xmx2g
 -XX:+UseZGC
+--enable-preview
